--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
             <h1 class="hero_title">Salut, moi c'est Dylan</h1>
-            <p class="hero_desc">Je suis développeur</p>
+            <h2 class="hero_desc">Je suis développeur</h2>
           </div>
         </div>
       </div>
@@ -75,14 +75,14 @@
     <!-- about section -->
     <section id="about" class="py-5">
       <div class="container">
-        <h1 class="text-center mb-5">À propos de moi</h1>
+        <h2 class="text-center mb-5">À propos de moi</h2>
 
         <div class="row align-items-center">
           <!-- Photo carrée à gauche -->
           <div class="col-lg-4 mb-4 mb-lg-0">
             <div class="about-photo-container">
               <img
-                src="images/profil.png"
+                src="images/profil.webp"
                 class="img-fluid rounded about-photo"
                 alt="Portrait de Dylan Madeira"
               >
@@ -93,9 +93,9 @@
           <!-- Contenu texte à droite -->
           <div class="col-lg-8">
             <div class="about-content p-4">
-              <h2 class="mb-4">
+              <h3 class="mb-4">
                 Bonjour, moi c'est <span style="color: #00ddeb">Dylan</span>
-              </h2>
+              </h3>
 
               <p class="lead">
                 Codeur et moddeur de jeux, developpeur d’apps, et passionné de
@@ -126,7 +126,7 @@
 
               <!-- Section description -->
               <div class="about-description">
-                <h3 class="h5 mb-3">Mon parcours</h3>
+                <h2 class="h5 mb-3">Mon parcours</h2>
                 <p class="mb-3">
                   Ancien étudiant en psycho, à présent développeur passionné.
                   <br>
@@ -148,7 +148,7 @@
     <!-- skills section-->
     <section id="skills">
       <div class="container">
-        <h2 class="text-center">Mes compétences</h2>
+        <h1 class="text-center">Mes compétences</h1>
         <div class="row g-4 justify-content-center" id="skills-container"></div>
       </div>
     </section>
@@ -156,14 +156,14 @@
     <!-- portfolio section-->
     <section id="portfolio">
       <div class="container mt-3">
-        <h2 class="text-center">Mes projets</h2>
+        <h1 class="text-center">Mes projets</h1>
       </div>
     </section>
 
     <!-- contact section-->
     <section id="contact">
       <div class="container mt-3 contactContent">
-        <h2 class="text-center">Contactez-moi</h2>
+        <h1 class="text-center">Contactez-moi</h1>
         <div class="row justify-content-center">
           <!-- Email -->
           <div class="col-lg-6 mt-4 contactColumn">
