--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html lang="fr">
   <head>
     <title>Madeira Dylan</title>
-    <meta charset="utf-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1" >
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
       content="Portfolio de Madeira Dylan, développeur informatique - Découvrez mes compétences techniques et mes réalisations professionnelles"
-    >
+    />
     <!-- linking css file -->
-    <link rel="stylesheet" href="style.css" >
+    <link rel="stylesheet" href="style.css" />
     <!-- bootstrap CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-    >
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    >
+    />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
 
@@ -85,7 +85,7 @@
                 src="images/profil.webp"
                 class="img-fluid rounded about-photo"
                 alt="Portrait de Dylan Madeira"
-              >
+              />
               <div class="photo-frame"></div>
             </div>
           </div>
@@ -129,7 +129,7 @@
                 <h2 class="h5 mb-3">Mon parcours</h2>
                 <p class="mb-3">
                   Ancien étudiant en psycho, à présent développeur passionné.
-                  <br>
+                  <br />
                   Après 3 ans à explorer l’esprit humain, j’ai choisi de me
                   reconnecter à ma première passion : l’informatique.
                 </p>
@@ -144,7 +144,6 @@
         </div>
       </div>
     </section>
-    
 
     <!-- skills section-->
     <section id="skills">
@@ -167,7 +166,7 @@
         <h2 class="text-center">Contactez-moi</h2>
         <div class="row justify-content-center">
           <!-- Email -->
-          <div class="col-lg-6 mt-4 contactColumn">
+          <div class="col-lg-4 col-md-6 mt-4 contactColumn">
             <a
               href="mailto:dylan.madeira@proton.me"
               aria-label="Envoyer un email"
@@ -178,15 +177,44 @@
           </div>
 
           <!-- LinkedIn -->
-          <div class="col-lg-6 mt-4 contactColumn">
-            <a href="LinkedIn" aria-label="Profil LinkedIn">
+          <div class="col-lg-4 col-md-6 mt-4 contactColumn">
+            <a href="#" aria-label="Profil LinkedIn">
               <i class="fa-brands fa-linkedin-in fa-4x"></i>
             </a>
             <h3 class="h4 mt-2">LinkedIn</h3>
           </div>
+
+          <!-- Github -->
+          <div class="col-lg-4 col-md-6 mt-4 contactColumn">
+            <a href="https://github.com/Segners" aria-label="Profil github">
+              <i class="fab fa-github fa-4x"></i>
+            </a>
+            <h3 class="h4 mt-2">Github</h3>
+          </div>
         </div>
       </div>
     </section>
+
+    <!-- Footer -->
+    <footer class="text-center text-white pt-4">
+      <div class="container p-4">
+        <!-- Section: Text -->
+        <div class="mb-3">
+          <p>
+            N'hésitez pas à me contacter pour toute opportunité ou
+            collaboration.
+          </p>
+        </div>
+
+        <!-- Copyright -->
+        <div
+          class="text-center p-3"
+          style="background-color: rgba(0, 0, 0, 0.2)"
+        >
+          © 2025 Madeira Dylan - Tous droits réservés
+        </div>
+      </div>
+    </footer>
 
     <!-- load javascript after loading all html content -->
     <script src="script/script.js"></script>
