--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html lang="fr">
   <head>
     <title>Madeira Dylan</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta
       name="description"
       content="Portfolio de Madeira Dylan, développeur informatique - Découvrez mes compétences techniques et mes réalisations professionnelles"
-    />
+    >
     <!-- linking css file -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" >
     <!-- bootstrap CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-    />
+    >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
+    >
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
 
@@ -65,8 +65,8 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-            <h1 class="hero_title">Salut, moi c'est Dylan</h1>
-            <h2 class="hero_desc">Je suis développeur</h2>
+            <h1 class="hero_title">Debugging, code & passion</h1>
+            <h2 class="hero_desc">Bienvenue dans mon monde</h2>
           </div>
         </div>
       </div>
@@ -81,13 +81,14 @@
           <!-- Photo carrée à gauche -->
           <div class="col-lg-4 mb-4 mb-lg-0">
             <div class="about-photo-container">
+              <div class="photo-frame"></div>
               <img
                 src="images/profil.webp"
-                class="img-fluid rounded about-photo"
+                class="about-photo"
                 alt="Portrait de Dylan Madeira"
-              />
-              <div class="photo-frame"></div>
+              >
             </div>
+            
           </div>
 
           <!-- Contenu texte à droite -->
@@ -129,7 +130,7 @@
                 <h2 class="h5 mb-3">Mon parcours</h2>
                 <p class="mb-3">
                   Ancien étudiant en psycho, à présent développeur passionné.
-                  <br />
+                  <br>
                   Après 3 ans à explorer l’esprit humain, j’ai choisi de me
                   reconnecter à ma première passion : l’informatique.
                 </p>
@@ -208,8 +209,7 @@
 
         <!-- Copyright -->
         <div
-          class="text-center p-3"
-          style="background-color: rgba(0, 0, 0, 0.2)"
+          class="text-center p-3 footer-text"
         >
           © 2025 Madeira Dylan - Tous droits réservés
         </div>
