--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
           <!-- LinkedIn -->
           <div class="col-lg-4 col-md-6 mt-4 contactColumn">
-            <a href="#" aria-label="Profil LinkedIn">
+            <a href="https://www.linkedin.com/in/dylan-madeira" aria-label="Profil LinkedIn">
               <i class="fa-brands fa-linkedin-in fa-4x"></i>
             </a>
             <h3 class="h4 mt-2">LinkedIn</h3>
